# lzjd2

./: BUGFIX.md  Cargo.toml  LICENSE  readme.md
.github/workflows/: lint.yml
src/: lib.rs  lzjd.rs  murmur3.rs  rabinkarp.rs
testdata/: lorem_ipsum_10.lzjd.txt  lorem_ipsum_10.txt  lorem_ipsum_5.lzjd.txt  lorem_ipsum_5.txt  lorem_ipsum_6.lzjd.txt  lorem_ipsum_6.txt  random.bin.lzjd.txt
