[package]
name = "malwaredb-lzjd2"
edition = "2021"
version = "0.0.1"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/malwaredb/lzjd2"
repository = "https://github.com/malwaredb/lzjd2"
readme = "readme.md"
keywords = ["lzjd", "hashing"]
categories = ["algorithms"]
description = "Rust implementation of the LZJD algorithm by Edward Raff -- https://github.com/EdwardRaff/jLZJD"
rust-version = "1.78"

[features]
default = []
serde = ["serde/derive"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", optional = true }

[dev-dependencies]
rstest = "0.26.1"
